--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="/favicon-32x32.png"/>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/x-icon" href="/favicon-32x32.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
     <title>QR Code Component</title>
 </head>
 <body>
